@@ -1,3 +1,8 @@
+2006-04-28  Alexander Malysh <amalysh at kannel.org>
+  * gw/smsbox.c: fixed memory leak.
+    Thanks to Rafael <rafael at atgcaribbean.com> for patch.
+    [Msg-Id: <44510365.8070000@atgcaribbean.com>]
+
 2006-04-24 Andreas Fink <andreas@fink.org>
   * gw/smsc/smsc_at.c, gw/msg.h, gw/smsbox.c, gw/urltrans.c
     added new parameter %f to show the SMSC number from which an incoming sms
